--- a/registrate.kv
+++ b/registrate.kv
@@ -1,4 +1,13 @@
 <Registring>
+    canvas.before:
+        Color:
+            rgba: (18/255, 48/255, 5/255, 0.97)
+        Rectangle: 
+            pos: self.pos
+            size: self.size
+
+
+
     name: name
     surname: surname
     last_name: last_name
@@ -15,13 +24,21 @@
     GridLayout:
         size: root.width, root.height
         cols: 1
+        
         GridLayout:
-
+            
             cols: 2
             rows: 4
 
             Label:
                 text: "Имя"
+                canvas.before:
+                    Color:
+                        rgba: (1, 1, 1, 0.05)
+                    RoundedRectangle:
+                        size: 50, 50
+                        pos: self.pos
+                        radius: [15]
             TextInput:
                 id: name
                 multiline: False
@@ -65,6 +82,7 @@
 
             Label:
                 text: "Логин"
+
             TextInput:
                 id: login
                 multiline: False
@@ -95,3 +113,11 @@
             text: "Регистрация"
             font_size: 40
             on_press: root.btn_click()
+<RoundedRectangle@Rectangle>
+    canvas.before:
+        Color:
+            rgba: (18/255, 48/255, 5/255, 0.3)
+        RoundedRectangle:
+            size: self.size
+            pos: self.pos
+            radius: [58]
