--- a/registrate.kv
+++ b/registrate.kv
@@ -1,13 +1,4 @@
 <Registring>
-    canvas.before:
-        Color:
-            rgba: (18/255, 48/255, 5/255, 0.97)
-        Rectangle: 
-            pos: self.pos
-            size: self.size
-
-
-
     name: name
     surname: surname
     last_name: last_name
@@ -24,9 +15,8 @@
     GridLayout:
         size: root.width, root.height
         cols: 1
-        
         GridLayout:
-            
+
             cols: 2
             rows: 4
 
@@ -34,18 +24,22 @@
                 text: "Имя"
                 canvas.before:
                     Color:
-                        rgba: (1, 1, 1, 0.05)
+                        rgba: (.5, .5, .5, 0.15)
                     RoundedRectangle:
-                        size: 50, 50
-                        pos: self.pos
+                        size: 200, 200
+                        pos: self.x, self.y
                         radius: [15]
+                hint_text: "Введите имя"
             TextInput:
                 id: name
+                font_name: "Comic"
                 multiline: False
             Label:
+                font_name: "Comic"
                 text: "Фамилия"
             TextInput:
                 id: surname
+                font_name: "Comic"
                 multiline: False
             Label:
                 text: "Отчество"
@@ -82,7 +76,6 @@
 
             Label:
                 text: "Логин"
-
             TextInput:
                 id: login
                 multiline: False
@@ -93,6 +86,7 @@
                 text: "Пароль"
             TextInput:
                 id: password
+                password: True
                 multiline: False
             Label:
                 id: check_2
@@ -102,6 +96,7 @@
                 text: "Повторите пароль"
             TextInput:
                 id: confirm_password
+                passwword: True
                 multiline: False
             Label:
                 id: check_3
@@ -113,11 +108,3 @@
             text: "Регистрация"
             font_size: 40
             on_press: root.btn_click()
-<RoundedRectangle@Rectangle>
-    canvas.before:
-        Color:
-            rgba: (18/255, 48/255, 5/255, 0.3)
-        RoundedRectangle:
-            size: self.size
-            pos: self.pos
-            radius: [58]
