--- a/login.kv
+++ b/login.kv
@@ -1,13 +1,11 @@
-#:import md_icons kivymd.icon_definitions.md_icons
 <Logining>
     username_input: username_input
     password_input: password_input
-
     BoxLayout:
         orientation: 'vertical'
 
-        Label:
-            font_name:
+        MyLabel:
+            font_name: 'rubikMonoOne_regular'
             text: 'Вход'
             font_size: 24
 
