--- a/registrate.kv
+++ b/registrate.kv
@@ -32,14 +32,14 @@
                 hint_text: "Введите имя"
             TextInput:
                 id: name
-                font_name: "Comic"
+                font_name: "Finlandca-Medium"
                 multiline: False
             Label:
-                font_name: "Comic"
+                font_name: "Finlandca-Medium"
                 text: "Фамилия"
             TextInput:
                 id: surname
-                font_name: "Comic"
+                font_name: "Finlandca-Medium"
                 multiline: False
             Label:
                 text: "Отчество"
