--- a/registrate.kv
+++ b/registrate.kv
@@ -1,3 +1,4 @@
+#: import FadeTransition kivy.uix.screenmanager.FadeTransition
 <RegApp>
     vital_name: vital_name
     surname: surname
@@ -92,7 +93,9 @@
                 font_name: "RubikMonoOne-Regular"       
                 text: "Обратно к логину"
                 font_size: 20
-                on_press: root.current = 'Log'
+                on_press:
+                    root.transition = FadeTransition(clearcolor=(0, 1, 0, 1))
+                    root.manager.current = 'Log'
                 background_color: (.5, .5, .5, 0.6)
         GridLayout:
             cols: 5
@@ -203,11 +206,17 @@
             pos: self.pos
             size: self.size
     GridLayout:
+        row_force_default: True
+        col_force_default: True  
         rows: 5
-        size: root.width/2, root.height/2
-        pos: root.width/4, root.height/4
+        row_default_height: root.height / 6
+        col_default_width: root.width / 2
+        
+        pos: root.width/4, -root.height/8
         Label:
             text: 'Вход'
+            font_name: "RubikMonoOne-Regular" 
+            size: 400, 400
             font_size: 50
         GridLayout:
             rows: 3
@@ -219,9 +228,9 @@
                 hint_text: 'Пароль'
                 password: True  # Скрыть ввод пароля
         GridLayout:
-            size: 400, 400
             rows: 1
             Button:
+                font_name: "RubikMonoOne-Regular" 
                 text: 'Войти'
                 on_release: root.entering()
                 font_size: 45
@@ -233,4 +242,6 @@
                 font_name: 'Finlandica-Regular'
                 text: 'Не зарегестрированы? Сделайте это сейчас!'
                 font_size: 16
-                on_press: root.manager.current = 'Reg'
+                on_press: 
+                    root.transition = FadeTransition(clearcolor=(0, 1, 0, 1))           
+                    root.manager.current = 'Reg'
