--- a/registrate.kv
+++ b/registrate.kv
@@ -157,6 +157,13 @@
             Label:
                 font_name: "RubikMonoOne-Regular"               
                 text: "Логин"
+                canvas.before:
+                    Color:
+                        rgba: (.5, .5, .5, 0.6)
+                    RoundedRectangle:
+                        size: self.width, self.height / 1.5
+                        pos: 0, root.height / 3 * 1.05
+                        radius: [15]
             TextInput:
                 id: login
                 multiline: False
@@ -167,6 +174,13 @@
             Label:
                 font_name: "RubikMonoOne-Regular"               
                 text: "Пароль"
+                canvas.before:
+                    Color:
+                        rgba: (.5, .5, .5, 0.6)
+                    RoundedRectangle:
+                        size: self.width, self.height / 1.5
+                        pos: 0, root.height / 3 * 0.85
+                        radius: [15]
             TextInput:
                 id: password
                 password: True
@@ -180,6 +194,13 @@
             Label:
                 font_name: "RubikMonoOne-Regular"              
                 text: "Повторите пароль"
+                canvas.before:
+                    Color:
+                        rgba: (.5, .5, .5, 0.6)
+                    RoundedRectangle:
+                        size: self.width, self.height / 1.5
+                        pos: 0, root.height / 3 * 0.65
+                        radius: [15]
             TextInput:
                 id: confirm_password
                 password: True
