--- a/registrate.kv
+++ b/registrate.kv
@@ -265,6 +265,7 @@
                 font_name: 'Finlandica-Regular'
                 text: 'Не зарегестрированы? Сделайте это сейчас!'
                 font_size: 16
+                background_color: (1, 1, 1, 0.5)
                 on_press: 
                     root.manager.transition = NoTransition()
                     root.manager.current = 'Reg'
