--- a/registrate.kv
+++ b/registrate.kv
@@ -31,10 +31,10 @@
                 font_name: "RubikMonoOne-Regular"
                 canvas.before:
                     Color:
-                        rgba: (.5, .5, .5, 0.6)
+                        rgba: (.5, .5, .5, 0.1)
                     RoundedRectangle:
-                        size: self.width / 5, self.height
-                        pos: root.width / 5, self.y
+                        size: self.width / 5, self.height - self.height/8
+                        pos: root.width / 5, self.y + 2
                         radius: [15]
                 hint_text: "Введите имя"
             TextInput:
@@ -45,10 +45,10 @@
                 text: "Фамилия"
                 canvas.before:
                     Color:
-                        rgba: (.5, .5, .5, 0.6)
+                        rgba: (.5, .5, .5, 0.1)
                     RoundedRectangle:
-                        size: self.width / 4, self.height
-                        pos: root.width / 5.30, self.y
+                        size: self.width / 4, self.height - self.height/8
+                        pos: root.width / 5.30, self.y + 2
                         radius: [15]
             TextInput:
                 id: surname
@@ -59,10 +59,10 @@
                 font_size: 16
                 canvas.before:
                     Color:
-                        rgba: (.5, .5, .5, 0.6)
+                        rgba: (.5, .5, .5, 0.1)
                     RoundedRectangle:
-                        size: self.width / 3.25, self.height
-                        pos: root.width / 5.75, self.y
+                        size: self.width / 3.25, self.height - self.height/8
+                        pos: root.width / 5.75, self.y + 2
                         radius: [15]
             TextInput:
                 id: last_name
@@ -72,10 +72,10 @@
                 text: "Дата рождения"
                 canvas.before:
                     Color:
-                        rgba: (.5, .5, .5, 0.6)
+                        rgba: (.5, .5, .5, 0.1)
                     RoundedRectangle:
-                        size: self.width / 2.2, self.height
-                        pos: root.width / 7.25, self.y
+                        size: self.width / 2.2, self.height - self.height/8
+                        pos: root.width / 7.25, self.y + 2
                         radius: [15]
             TextInput:
                 id: born
@@ -96,7 +96,7 @@
                 on_press:
                     root.manager.transition = NoTransition()
                     root.manager.current = 'Log'
-                background_color: (.5, .5, .5, 0.6)
+                background_color: (.5, .5, .5, 0.1)
         GridLayout:
             cols: 5
             Label:
@@ -104,10 +104,10 @@
                 text: "Пол"
                 canvas.before:
                     Color:
-                        rgba: (.5, .5, .5, 0.6)
+                        rgba: (.5, .5, .5, 0.1)
                     RoundedRectangle:
                         size: self.width / 2, self.height / 2
-                        pos: root.width / 3 * 0.15, root.height / 3 * 1.33
+                        pos: root.width / 3 * 0.15, root.height / 3 * 1.33 + 5
                         radius: [15]
             CheckBox:
                 group: "sex"
@@ -115,27 +115,27 @@
                 active: True
                 canvas.before:
                     Color:
-                        rgba: (.5, .5, .5, 0.4)
+                        rgba: (.5, .5, .5, 0.1)
                     RoundedRectangle:
                         size: self.width / 3, self.height / 2
-                        pos: root.width / 3 * 0.8, root.height / 3 * 1.33
+                        pos: root.width / 3 * 0.8, root.height / 3 * 1.33 + 5
                         radius: [15]
             Label:
                 font_name: "RubikMonoOne-Regular"   
                 text: "Мужской"
                 canvas.before:
                     Color:
-                        rgba: (.5, .5, .5, 0.6)
+                        rgba: (.5, .5, .5, 0.1)
                     RoundedRectangle:
                         size: self.width, self.height / 2
-                        pos: root.width / 3 * 1.2, root.height / 3 * 1.33
+                        pos: root.width / 3 * 1.2, root.height / 3 * 1.33 + 5
                         radius: [15]
             CheckBox:
                 group: "sex"
                 id: cb2
                 canvas.before:
                     Color:
-                        rgba: (.5, .5, .5, 0.4)
+                        rgba: (.5, .5, .5, 0.1)
                     RoundedRectangle:
                         size: self.width / 3, self.height / 2
                         pos: root.width / 3 * 2, root.height / 3 * 1.33
@@ -145,10 +145,10 @@
                 text: "Женский"
                 canvas.before:
                     Color:
-                        rgba: (.5, .5, .5, 0.6)
+                        rgba: (.5, .5, .5, 0.1)
                     RoundedRectangle:
                         size: self.width, self.height / 2
-                        pos: root.width / 3 * 2.4, root.height / 3 * 1.33
+                        pos: root.width / 3 * 2.4, root.height / 3 * 1.33 + 5
                         radius: [15]
         GridLayout:
             size: root.width, root.height
@@ -159,10 +159,10 @@
                 text: "Логин"
                 canvas.before:
                     Color:
-                        rgba: (.5, .5, .5, 0.6)
+                        rgba: (.5, .5, .5, 0.1)
                     RoundedRectangle:
-                        size: self.width, self.height / 1.5
-                        pos: 0, root.height / 3 * 1.05
+                        size: self.width - self.width/2, self.height / 1.5
+                        pos: root.width / 12, root.height / 3 * 1.05 - 3
                         radius: [15]
             TextInput:
                 id: login
@@ -176,10 +176,10 @@
                 text: "Пароль"
                 canvas.before:
                     Color:
-                        rgba: (.5, .5, .5, 0.6)
+                        rgba: (.5, .5, .5, 0.1)
                     RoundedRectangle:
-                        size: self.width, self.height / 1.5
-                        pos: 0, root.height / 3 * 0.85
+                        size: self.width - self.width/3, self.height / 1.5
+                        pos: root.width / 18, root.height / 3 * 0.85 - 3
                         radius: [15]
             TextInput:
                 id: password
@@ -196,10 +196,10 @@
                 text: "Повторите пароль"
                 canvas.before:
                     Color:
-                        rgba: (.5, .5, .5, 0.6)
+                        rgba: (.5, .5, .5, 0.1)
                     RoundedRectangle:
-                        size: self.width, self.height / 1.5
-                        pos: 0, root.height / 3 * 0.65
+                        size: self.width - self.width/8, self.height / 1.5
+                        pos: root.width / 55, root.height / 3 * 0.65 - 3
                         radius: [15]
             TextInput:
                 id: confirm_password
@@ -219,7 +219,7 @@
             on_press: 
                 root.manager.transition = NoTransition()
                 if root.btn_click(): root.manager.current = 'Log'
-            background_color: (.5, .5, .5, 0.6)
+            background_color: (.5, .5, .5, 0.2)
 <LogApp>
     username_input: username_input
     password_input: password_input
