--- a/Points.kv
+++ b/Points.kv
@@ -15,7 +15,7 @@
             Button:
                 canvas.before:
                     Rectangle:
-                        source: "Images/shapes/circle2.png"
+                        source: "Images/shapes/circle!!png.png"
                         size: 100, 100
                         pos: self.pos
                 background_color: (0, 0, 0, 0)
@@ -27,7 +27,7 @@
             Button:
                 canvas.before:
                     Rectangle:
-                        source: "Images/shapes/circle2.png"
+                        source: "Images/shapes/circle!!png.png"
                         size: 100, 100
                         pos: self.pos
                 background_color: (0, 0, 0, 0)
@@ -39,7 +39,7 @@
             Button:
                 canvas.before:
                     Rectangle:
-                        source: "Images/shapes/circle2.png"
+                        source: "Images/shapes/circle!!png.png"
                         size: 100, 100
                         pos: self.pos
                 background_color: (0, 0, 0, 0)
