--- a/registrate.kv
+++ b/registrate.kv
@@ -233,7 +233,6 @@
     username_input: username_input
     password_input: password_input
     worst_login: worst_login
-
     canvas:
         Rectangle:
             source: 'Images/backgrounds/background4.jpg'
@@ -292,7 +291,7 @@
 
             Button:
                 font_name: 'Finlandica-Regular'
-                text: 'Не зарегестрированы? Сделайте это сейчас!'
+                text: 'Не зарегистрированы? Сделайте это сейчас!'
                 font_size: 16
                 background_color: (1, 1, 1, 0)
                 on_press:
