--- a/adminLogin.kv
+++ b/adminLogin.kv
@@ -1,6 +1,6 @@
 <AdminLogApp>
     username_input: username_input
-    password_input: username_input
+    password_input: password_input
     worst_login: worst_login
     canvas:
         Rectangle:
